# Zephyrgebra

./: CMakeLists.txt  test_matrix
doc/: ZephyrVectors.md
include/: Matrix.h  Polynomials.h  Vector.h
src/: Matrix.c  Polynomials.c  Vector.c
test/Matrix/: matrix_test_basic.c
tests/: Testing Suite.c
